dhall/tests/type-inference/failure/unit/WithNotRecord.txt
Type error: error: WithMustBeRecord
 --> <current file>:1:1
  |
1 | 5 with a = 10
  | ^^^^^^^^^^^^^ WithMustBeRecord
  |
